--- a/samples/crysil-server-android/app/src/main/res/layout/activity_create_key.xml
+++ b/samples/crysil-server-android/app/src/main/res/layout/activity_create_key.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="at.tugraz.iaik.skytrust.CreateKeyActivity">
+    tools:context="org.crysil.CreateKeyActivity">
 
     <TextView
         android:id="@+id/tvAlias"
