--- a/samples/crysil-server-android/app/src/main/res/layout/activity_import_keys.xml
+++ b/samples/crysil-server-android/app/src/main/res/layout/activity_import_keys.xml
@@ -7,7 +7,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="at.tugraz.iaik.skytrust.ImportKeyActivity">
+                tools:context="org.crysil.ImportKeyActivity">
 
     <TextView
         android:id="@+id/tvInfo"
