--- a/samples/crysil-server-android/app/src/main/res/layout/activity_key_list.xml
+++ b/samples/crysil-server-android/app/src/main/res/layout/activity_key_list.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="at.tugraz.iaik.skytrust.KeyListActivity">
+                tools:context="org.crysil.KeyListActivity">
 
     <ListView
         android:id="@+id/lvKeys"
