--- a/samples/crysil-server-android/app/src/main/res/layout/activity_webservice_list.xml
+++ b/samples/crysil-server-android/app/src/main/res/layout/activity_webservice_list.xml
@@ -2,7 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="at.tugraz.iaik.skytrust.WebserviceListActivity">
+                tools:context="org.crysil.WebserviceListActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
